# neural-style-transfer-api

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
deploy/lambda/: Dockerfile  README.md  app.py
scripts/: run-dev.sh
src/neural_style_transfer_api/: api.py  main.py  middleware.py  nst.py
src/neural_style_transfer_api/realtime/: __init__.py  ex_websocket.py  nst_websocket.py
src/neural_style_transfer_api/rest/: __init__.py  nst_v1.py  test.py
tests/: smoke_test.py
